This PR leverages the existing docs generator tool to expose a comprehensive configuration reference documentation for the Polaris site.
This extends the existing `config-docs` generator to support two types of configuration sources:

1. SmallRye Config properties (from `@ConfigMapping` annotated interfaces)
2. `PolarisConfiguration` static fields (both `FeatureConfiguration` and `BehaviorChangeConfiguration`)

Key changes:

- Modified `DocGenDoclet` to extract configuration metadata from `FeatureConfiguration` and `BehaviorChangeConfiguration` static fields using reflection and javadoc processing.
- Add new Gradle task to copy generated docs to the site content directory with proper Hugo front matter
- Reorganize site configuration documentation into a dedicated section with separate pages for configuration overview and reference
- Add CI workflow step to verify generated configuration docs are up-to-date

The generated documentation includes property names, descriptions, default values, types, and catalog config mappings where applicable.